@@ -1,7 +1,6 @@
 (defproject jedi-time "0.3.0-SNAPSHOT"
-  :description "A respectful wrapper around java.time"
-  :url "http://example.com/FIXME"
+  :description "Datafiable/Navigable protocol extensions for the core java.time objects."
+  :url "https://github.com/jimpil/jedi-time"
   :license {:name "Eclipse Public License"
             :url  "http://www.eclipse.org/legal/epl-v10.html"}
-  ;:jvm-opts ["--add-modules" "java.sql" "java.time"]
   :dependencies [[org.clojure/clojure "1.10.1" :scope "provided"]])
